
[workspace]
members = ["crates/kre8ntemjs_core", "crates/kre8ntemjs_cli"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["You <you@example.com>"]
repository = "https://github.com/elev8tion/kre8ntemjs"

[workspace.dependencies]
anyhow = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
time = "0.3"
humantime = "2"
walkdir = "2"
