[package]
name = "kre8ntemjs_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for Kre8ntem JavaScript template fuzzer"

[[bin]]
name = "kre8ntemjs"
path = "src/main.rs"

[dependencies]
kre8ntemjs_core = { path = "../temujsx_core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
humantime = "2.0"
