[package]
name = "kre8ntemjs_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for Kre8ntem JavaScript template engine"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tempfile = "3.0"
walkdir = "2.0"
anyhow = "1.0"
thiserror = "1.0"
